--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "This is Denis Mitiliuc web page",
   "main": "index.js",
   "dependencies": {
+    "@zeit/next-css": "^1.0.1",
     "jest": "^26.6.3",
     "next": "^10.0.3",
     "react": "^17.0.1",
